imagem do app+ 19,7 covered

--- a/Beca Filmes/Podfile
+++ b/Beca Filmes/Podfile
@@ -6,6 +6,8 @@ target 'Beca Filmes' do
   use_frameworks!
   pod 'Alamofire', '~> 4.7.0'
   pod 'AlamofireImage', '~> 3.4.0'
+  
+  pod 'SwiftLint'
 
   target 'Beca FilmesTests' do
     inherit! :search_paths
